fix(spacing): less spacing below feature tab screenshot

--- a/sass/homepage.scss
+++ b/sass/homepage.scss
@@ -352,7 +352,7 @@
 
 	img {
 		width: 100%;
-		padding-bottom: 46px;
+		padding-bottom: 32px;
 	}
 
 	h3 {
